--- a/public/sass/views/_home.scss
+++ b/public/sass/views/_home.scss
@@ -1,12 +1,61 @@
+p{
+  font-family: $primary-text-font;
+  font-size: $p-text-size; 
+}
+
+h2{
+  font-size: $h2-text-size;
+}
+
+
 .jumbotron {
-  background-image: url('https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350')
+  height: 450px;
+  color: white;
 
   h1{
     font-size: $h1-text-size;
     padding: 5% 0;
+    margin: 20% 0 0 0;
+    // text-shadow: 2px 2px 10px #000000;
+
   }
   p{
     font-family: $primary-text-font;
     font-size: $p-text-size;
+    font-weight: 500;
   }
+}
+
+.header{
+  h1{
+    font-size: $h1-text-size;
+    padding: 5% 0 0 0;
+  }
+}
+
+
+#jumbo-header{
+  background: linear-gradient(225deg, rgba(0,0,0,0), rgba(0,0,0,0.3)),
+  url('../../images/jumbotron-background.jpg') center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+#jumbo-mid{
+  display: flex;
+  align-items: flex-end;
+  background: linear-gradient(315deg, rgba(0,0,0,0.5), rgba(0,0,0,0)), 
+  url('../../images/values.jpg') center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#jumbo-bottom{
+  display: flex;
+  align-items: flex-end;
+  background: linear-gradient(45deg, rgba(0,0,0,0.5), rgba(0,0,0,0)), 
+  url('../../images/values2.jpg') center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
