--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-size: 14px;
+  font-size: 16px;
   font-family: "Lato", sans-serif; }
 
 .vh-100 {
@@ -21,7 +21,7 @@ h2 {
   font-weight: 700; }
 
 h2 {
-  font-size: 1.2rem; }
+  font-size: 1.4rem; }
 
 .btn {
   border-radius: 0; }
@@ -151,10 +151,44 @@ h2 {
 .buddies-list .buddie-info {
   height: 200px; }
 
-.jumbotron h1 {
-  font-size: 2rem;
-  padding: 5% 0; }
-
-.jumbotron p {
+p {
   font-family: "Lato", sans-serif;
-  font-size: 1rem; }
+  font-size: 1.1rem; }
+
+h2 {
+  font-size: 1.4rem; }
+
+.jumbotron {
+  height: 450px;
+  color: white; }
+  .jumbotron h1 {
+    font-size: 2rem;
+    padding: 5% 0;
+    margin: 20% 0 0 0; }
+  .jumbotron p {
+    font-family: "Lato", sans-serif;
+    font-size: 1.1rem;
+    font-weight: 500; }
+
+.header h1 {
+  font-size: 2rem;
+  padding: 5% 0 0 0; }
+
+#jumbo-header {
+  background: linear-gradient(225deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3)), url("../../images/jumbotron-background.jpg") center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+#jumbo-mid {
+  display: flex;
+  align-items: flex-end;
+  background: linear-gradient(315deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url("../../images/values.jpg") center;
+  background-repeat: no-repeat;
+  background-size: cover; }
+
+#jumbo-bottom {
+  display: flex;
+  align-items: flex-end;
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)), url("../../images/values2.jpg") center;
+  background-repeat: no-repeat;
+  background-size: cover; }
