--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,34 +1,47 @@
+{{!-- <div class="container header mt-5">
+  <h1>Discover & Connect with People out of your city</h1>
+
+</div> --}}
 
 <section class="top-section mt-5">
-  <div class="jumbotron text-center">
+  <div class="jumbotron" id="jumbo-header">
     <h1 class="display-6">Discover & Connect with People out of your city</h1>
     <p class="lead">LocalBuddy is the new platform where you can connect with thousands of friends to live experiences out of your city.</p>
     <p><a class="btn btn-lg btn-success" href="/signup" role="button">Sign up today</a></p>
   </div>
 
   <div class="container">
+    <h2>Meet our buddies</h2>
     {{> swiperslider }}
   </div>
 
-<div class="container marketing">
+  <section class="mid-section">
+    <div class="jumbotron row text-right" id="jumbo-mid">
+      <div class="col-3"></div>
+      <div class="lead col-9">
+        <h2>Hello</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque a cum nihil sapiente consequuntur laborum sunt qui. Eum blanditiis, nemo autem error praesentium, necessitatibus eligendi quibusdam vitae fuga quod cumque.</p>
+      </div>
+    </div>
+  </section>
+  
+  <div class="container marketing text-center">
+    <div class="row">
+      <div class="col-lg-4 mt-3">
+        <h2 class="mt-3">Heading</h2>
+        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+    </div>
 
-        <!-- Three columns of text below the carousel -->
-        <div class="row text-center">
-          <div class="col-lg-4">
-            <img class="rounded-circle mt-3" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2 class="mt-3">Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4 mt-3">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2 class="mt-3">Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4 mt-3">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2 class="mt-3">Heading</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          </div><!-- /.col-lg-4 -->
-        </div><!-- /.row -->
+  <section class="botton-section">
+    <div class="jumbotron row text-left" id="jumbo-bottom">
+      <div class="lead col-9">
+        <h2>Hello</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit necessitatibus dolores autem sequi sint voluptatem dolorum inventore amet expedita ex. Dolorem repellendus necessitatibus, quibusdam veritatis suscipit officia commodi numquam obcaecati!</p>
+        
+      </div>
+      <div class="col-3"></div>
+    </div>
+  </section>
+
 
 </section>
